# netwatchm

./: .gitignore  .project-meta.json  CHECKLIST.md  CLAUDE.md  NetWatchM-guide.html  NetWatchM-guide.md  README.md  ai.html  deep-inspect-web.html  deploy-services.sh  deploy-web.sh  firewall.html  grafana-dashboard.json  install.sh  netwatchm-journald.conf  netwatchm-logrotate  netwatchm-notify@.service  netwatchm-web.service  netwatchm.yaml.example  netwatchm_server.py  pyproject.toml  report.html  summary.html
docs/: ip-investigation-log.md  ip-investigation-qrcards.md  security-ai-hardening.md
netwachmInstall/: INSTALL.md  build-linux.sh  build-windows.ps1  install-launcher.sh  install.bat  install.ps1  install.sh  installer.spec  installer_gui.py  installer_gui_linux.py  installer_version.txt  netwatchm.spec  reinstall-all.sh
plans/: deep-inspection-analytics.md
scripts/: Watch-NetWatchMLogs.ps1  agent-doctor.sh  agent-watcher.sh  apply-agent-model.sh  apply-config-fix.sh  backup-before-nas-migration.sh  bench-ollama.py  capture-switch.sh  capture-targetip.sh  configure-digest-mode.sh  configure-grafana-remote.sh  copy-data-to-new-locations.sh  copy-deep-inspect-web.sh  count-tokens.py  demo-report.py  deploy-ai.sh  deploy-geoip.sh  deploy-server.sh  deploy-summary.sh  enable-agent-dryrun.sh  enable-ntfy.sh  enable-ollama-gpu.sh  enable-remote-access.sh  fix-admin-token.sh  fix-email-cooldown.sh  gen-report.sh  harden-ollama-cpu-only.sh  harden-service-user.sh  hotdeploy.sh  import-dashboard.sh  install-cert-linux.sh  install-cert-windows.ps1  install-to-path.sh  (+29 more)
(+104 files in other folders)
